# llm_quantization

./: .gitignore  example.py  gpt_2_inference_quantization.ipynb  test.py
ViT/: =4.2  ViT_inference.ipynb  ViT_quantization.ipynb
ViT/pytorch_pretrained_vit/: __init__.py  model.py  model_quantization.py  transformer.py  transformer_quantization.py  utils.py
gemm-int8/: CMakeLists.txt  README.md  benchmark_dequant.py  benchmark_dynamic_quant.py  benchmark_int8_matmul.py  benchmark_quantization.py  build.sh  multi_head_attention.ipynb  pyproject.toml  setup.py  test.py  test_compile_quant_model.ipynb  trace.json
gemm-int8/.github/workflows/: build-and-release.yml
gemm-int8/benchmark_results/: dynamic_vs_static_quantization_gemm_time.txt
gemm-int8/csrc/kernels/: bindings.cpp  gemm.cu
gemm-int8/csrc/kernels/include/: common.h  gemm.h
gemm-int8/gemm_int8/: __init__.py
gemm-on-chip/: benchmark_dequant.py  gemm_cutlass  gemm_cutlass.cu  quantization.py  run_torch.py  setup.py  test_element_wise.py  test_quantization_time.py  verify_de_quantization.py
gemm-on-chip/cutlass/examples/54_hopper_fp8_warp_specialized_gemm/: 54_hopper_fp8_warp_specialized_gemm.cu
gemm-on-chip/cutlass/include/cutlass/epilogue/thread/: linear_combination.h
gpt2/: gpt_2_inference.ipynb
qwen3/: standalone-qwen3-quantize.ipynb  standalone-qwen3.ipynb
